[Bug 553149] Implement sendCrossProcessKeyEvent for e10s. r=smaug